changed webkit appearance to none to handle dropdown styles bug on mobile safari and chrome (#123)

--- a/src/views/Portal/components/FormInputs/DropDown/index.scss
+++ b/src/views/Portal/components/FormInputs/DropDown/index.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  -webkit-appearance: none;
 
   &__question {
     @include typography.form-prompts;
